# rust-web

./: .gitignore  Cargo.toml  README.md
axum-p1/: Cargo.toml
axum-p1/examples/: quick_dev.rs
axum-p1/src/: error.rs  log.rs  main.rs  models.rs
axum-p1/src/web/: mod.rs  mw_auth.rs  routes_crud.rs  routes_login.rs
axum-p2/: Cargo.toml
axum-p2/src/: main.rs
axum-p2/src/routes/: give_my_json.rs  give_my_string.rs  hello.rs  mod.rs  path_var.rs  query_params.rs
simple-tracing/: Cargo.toml
simple-tracing/src/: main.rs
